# swarm-test

./: .gitignore  .swarmtest.example.yml  .swarmtest.yml  CHANGELOG.md  LICENSE  README.md  action.yml  areengine_graph.mmd  areengine_swarm_report.json  areengine_swarm_report.md  path  pyproject.toml  verify.md
.github/workflows/: ci.yml  swarm-test-example.yml
docs/integrations/: blackwall.md
examples/: areengine_swarm_test.py  ascii_graph_demo.py  autogen_crew.py  comparison_demo.py  contracts.yaml  example_plugin.py  langgraph_example.py  langgraph_research_crew.py  research_crew.py  sensitive_data_demo.py
examples/plugin_template/: README.md  pyproject.toml
examples/plugin_template/swarm_test_plugin_example/: __init__.py  plugin.py
swarm_test/: __init__.py  cli.py  comparison.py  config.py  history.py
swarm_test/attacks/: __init__.py  base.py  blast_radius.py  cascade.py  collusion.py  context_leakage.py  contract_violation.py  cost_risk.py  intent_drift.py  timeout_resilience.py  trajectory.py
swarm_test/contracts/: schema.py
swarm_test/core/: __init__.py  graph.py  interceptor.py  models.py  probe.py  taxonomy.py
swarm_test/integrations/: autogen_adapter.py  base.py  crewai_adapter.py  langgraph_adapter.py
swarm_test/plugins/: __init__.py  base.py  registry.py
swarm_test/reporters/: __init__.py  ascii_graph.py  console.py  github.py  graph_export.py  html.py  markdown.py
swarm_test/scoring/: __init__.py  agent_health.py
tests/: test_autogen.py  test_ci_gate.py  test_cli_verbosity.py  test_config.py  test_contracts.py  test_core.py  test_cost_risk.py  test_github_action.py  test_graph_export.py  test_history.py  test_html_report.py  test_langgraph.py  test_plugins.py  test_redundancy.py  test_role_aware_findings.py  test_taxonomy.py  test_trajectory.py
