[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-test"
version = "0.1.2"
description = "The first reliability testing framework for multi-agent AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "swarm-test contributors" }]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "reliability",
    "testing",
    "chaos",
    "crewai",
    "langchain",
    "autogen",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "networkx>=3.1",
    "rich>=13.0",
    "colorlog>=6.7",
    "click>=8.1",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.7",
    "black>=23.0",
    "types-networkx",
    "ipython",
]
crewai = ["crewai>=0.28"]
langchain = ["langchain>=0.1", "langgraph>=0.0.20"]

[project.scripts]
swarm-test = "swarm_test.cli:main"

[project.urls]
Homepage = "https://github.com/surajkumar811/swarm-test"
Documentation = "https://github.com/surajkumar811/swarm-test#readme"
Repository = "https://github.com/surajkumar811/swarm-test"
Issues = "https://github.com/surajkumar811/swarm-test/issues"

[tool.hatch.build.targets.wheel]
packages = ["swarm_test"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["swarm_test"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
